--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+#intelli profile
+sht-platform.iml
+#for maven
+target/
+
 # Package Files #
 *.jar
 *.war
